// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickUpFormPart component should renders correctly props not present 1`] = `
<Styled(View)
  isPayPalWebViewEnable={false}
>
  <CheckoutProgressIndicator
    activeStage="billing"
    availableStages={Object {}}
    navigation={Object {}}
  />
  <ScrollViewMock
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
    scrollEnabled={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <Styled(View)
      isPayPalWebViewEnable={false}
    >
      <CheckoutSectionTitleDisplay />
      <Connect(GiftCardsContainer) />
      <Connect(GuestBillingContainer)
        addressLabels={Object {}}
        billingData={null}
        creditFieldLabels={Object {}}
        cvvCodeRichText={null}
        isGuest={true}
        isPayPalWebViewEnable={false}
        isVenmoEnabled={false}
        isVenmoPaymentInProgress={false}
        labels={Object {}}
        navigation={Object {}}
        onVenmoError={Object {}}
        shippingAddress={null}
      />
    </Styled(View)>
  </ScrollViewMock>
</Styled(View)>
`;

exports[`PickUpFormPart component should renders correctly props not present 2`] = `
<Styled(View)
  isPayPalWebViewEnable={true}
>
  <ScrollViewMock
    contentContainerStyle={
      Object {
        "height": 1294,
        "position": "absolute",
        "width": "100%",
        "zIndex": 992,
      }
    }
    scrollEnabled={false}
    style={
      Object {
        "height": 1294,
        "position": "absolute",
        "width": "100%",
        "zIndex": 992,
      }
    }
  >
    <Styled(View)
      isPayPalWebViewEnable={true}
    >
      <CheckoutSectionTitleDisplay />
      <Connect(GiftCardsContainer) />
      <Connect(GiftCardsContainer)
        addressLabels={Object {}}
        billingData={null}
        creditFieldLabels={Object {}}
        cvvCodeRichText={null}
        handleSubmit={[Function]}
        isGuest={false}
        isPayPalWebViewEnable={true}
        isVenmoEnabled={false}
        isVenmoPaymentInProgress={false}
        labels={Object {}}
        navigation={Object {}}
        onVenmoError={Object {}}
        shippingAddress={null}
        userAddresses={null}
      />
    </Styled(View)>
  </ScrollViewMock>
</Styled(View)>
`;
